# dotfiles

./: .dockerignore  .gitflow  .gitignore  .mise.toml  .sops.yaml  Brewfile  Brewfile.linux  Brewfile.macos  CLAUDE.md  HANDOFF.dotfiles.workspace.yaml  HANDOFF.md  Justfile  Makefile  README.md  REFACTORING-SUMMARY.md  RTK.md  SCRIPTS.md  compose.yaml  flake.nix  install.ps1  install.sh  mise.local.toml.example  scripts-refactoring-analysis.md  skills
.claude/: .stow-local-ignore  CLAUDE.md  infra.toml.example  settings.json  statusline-command.sh  statusline-dotfiles.sh
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit  pre-push
colima/: README.md  com.colima.autostart.plist
config/: apt-packages.local.example.txt  apt-packages.txt  obfsck-secrets.yaml  stow-packages.local.example.txt  stow-packages.txt
docs/: 2026-02-27-bootstrap-runbook.md  2026-02-28-maestro-handoff.md  README.fish.md  README.nushell.md  README.zsh.md  machines.md  onboarding-new-machine.md  retry-after-network-fix.md  tailscale-topology.md
git/: .gitconfig
toolz/: Cargo.toml
toolz/src/: cli.rs  config.rs  main.rs  observability.rs  output.rs
toolz/src/commands/: mod.rs
toolz/src/commands/ai/: chat.rs  mod.rs  provider.rs  rag.rs
toolz/src/commands/db/: config.rs  mod.rs  runner.rs
toolz/src/commands/log/: analyze.rs  errors.rs  mod.rs
toolz/src/commands/sys/: brew.rs  cache.rs  cargo.rs  docker.rs  git.rs  mod.rs
toolz/src/tui/: app.rs  events.rs  mod.rs
toolz/src/tui/screens/: ai_chat.rs  db.rs  log.rs  main_screen.rs  mod.rs  sys.rs  traces.rs
(+328 files in other folders)
