[package]
name = "toolz"
version = "0.1.0"
edition = "2021"
description = "Personal swiss-army CLI: sys, log, ai, db"

[[bin]]
name = "toolz"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP (AI providers)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# AI embeddings for RAG (ONNX-based)
fastembed = "4"

# Persist RAG vector store
bincode = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Filesystem traversal
walkdir = "2"

# XDG config dirs
dirs = "5"

# Log pattern matching
regex = "1"

# Human-readable sizes
bytesize = "1"

# Progress bars
indicatif = "0.17"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"

# Async trait support
async-trait = "0.1"
